# gatesmith

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/gatesmith/: __init__.py  cli.py
src/gatesmith/cli/: main.py  renderer.py
src/gatesmith/core/: ast.py  evaluator.py  implicants.py  minimizer.py  netlist.py  parser.py  pipeline.py  truth_table.py  verifier.py  verilog.py
src/gatesmith/io/: __init__.py  reader.py  writer.py
test_data/: absorption_law.v  complement_law_and.v  complement_law_or.v  concensus_theorem.v  de_morgan_and.v  de_morgan_or.v  domination_law_0.v  domination_law_1.v  double_negation.v  idempotent_law_and.v  identity_law_0.v  identity_law_1.v  pos_canonical.v  precedence.v  simple_and.v  simple_not.v  simple_or.v  simple_xor.v  sop_canonical.v
tests/: test_evaluator.py  test_parser.py  test_synthesis.py  test_truth_table.py
